get all drones
